Modification noms (mapping en layer) et gestion du stockage
